# Forex-Model

./: .env.example  README.md  __init__.py  api.py  predict.py  predict_output.json  predict_utf8.json  pyproject.toml  requirements.txt  streamlit_app.py  train.py
