[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forex-multi-timeframe-predictor"
version = "0.1.0"
description = "Multi-timeframe forex forecasting tool (5m, 10m, 15m, 1h, 24h)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
